# cartola-analytics

./: .env.example  AGENTS.md  README.md  next_steps.md  pyproject.toml
.github/workflows/: ci.yml
docs/: auto-transform-pattern.md  cli-guide.md
docs/data-dictionary/: README.md
docs/issues/: [2025Set261202][001]auto-transform-endpoints.md
docs/schemas/: atletas_mercado.yaml  atletas_pontuados.yaml  clubes.yaml  mercado_status.yaml  partidas.yaml  pos_rodada_destaques.yaml  rodadas.yaml
src/cartola_analytics/: __init__.py  cli.py  config.py  data_dictionary.py  endpoints.py  http_client.py  logging_utils.py  schema.py  validation.py
src/cartola_analytics/pipelines/: __init__.py  atletas_mercado_transform.py  atletas_pontuados_transform.py  clubes_transform.py  mercado_status_transform.py  partidas_transform.py  pos_rodada_destaques_transform.py  raw.py  rodadas_transform.py
src/tests/: test_atletas_mercado_transform.py  test_atletas_pontuados_transform.py  test_cli.py  test_clubes_transform.py  test_config.py  test_data_dictionary.py  test_endpoints.py  test_http_client.py  test_logging_utils.py  test_mercado_status_transform.py  test_partidas_transform.py  test_pipeline_raw.py  test_pos_rodada_destaques_transform.py  test_rodadas_transform.py  test_sanity.py  test_schema.py  test_validation.py
